--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,10 @@ section{
     z-index: 0;
 }
 
+.clearfix{
+	clear: both;
+}
+
 .jscolor{
 	height: 30px;
 	border: 1px solid #BDBDBD;
@@ -213,11 +217,12 @@ section{
     display: block;
     font-family: "montserratBold";
     font-size: 12px;
-    color: #2E7D32;
+    /*color: #2E7D32;*/
 }
 
 .hr-sub-elem{
 	padding: 10px;
+	width: 65%;
 }
 
 #pg-colors h2{
@@ -229,6 +234,55 @@ section{
 	margin: 25px auto;
 	border-left: 3px solid;
     padding-left: 20px;
+}
+
+.hr-bloc-visuation{
+	height: 300px;
+	width: 30%;
+	position: fixed;
+	top:180px;
+	right: 100px;
+}
+
+.visualisation-inside{
+	border:1px solid #757575;
+	height: 100%;
+	background-color: #EEEEEE;
+}
+
+.previs-screen-header{
+	width: 100%;
+	height: 40px;
+	background-color: #616161;
+	position: relative;
+	z-index: 550;
+}
+
+.previs-screen-header .previs-header-menu{
+	height: 40px;
+	width: auto;
+	margin-left: 10px;
+}
+
+.previs-screen-header .previs-header-menu .previs-btn-menu{
+	display: inline-block;
+	margin-top: 5px;
+	margin-left: 2px;
+	width: 35px;
+	height: 35px;
+	background-color: #90A4AE;
+
+}
+
+.previs-screen-rightMenu{
+	width: 40px;
+	height: 86%;
+	background-color: #616161;
+	border-top: 2px solid #FFFFFF;
+	position: absolute;
+	top:40px;
+	right: 1px;
+	z-index: 50;
 }
 
 #chosenFontFamily{
