--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ section{
 
 
 .btn-large{
-
+	width: 100%;
 }
 
 .btn-medium{
@@ -283,6 +283,10 @@ section{
 	top:40px;
 	right: 1px;
 	z-index: 50;
+}
+
+.hr-bloc-generate{
+	margin-top:10px;
 }
 
 #chosenFontFamily{
