--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ section{
 	z-index: -1;
 	width: 100%;
 	height: 300px;
-	background-color: #81D4FA;
+	background-color: #009688;
 }
 
 .hr-bloc-customize-color, .hr-bloc-customize-text{
@@ -189,6 +189,7 @@ section{
 
 /*	Step : import skinpack	*/
 #pg-home h2{
+	color: #FFFFFF;
 	font-size: 50px;
 	text-align: center;
 }
@@ -311,4 +312,35 @@ section{
 #select-text-typo{
 	width: 150px;
 	height: 30px;
+}
+
+
+/*	Dialog : valider le modifs */
+.validate-bloc{
+	width: 100%; 
+	height: 100%; 
+	position: fixed; 
+	top:0px; 
+	background:rgba(0,0,0,0.6); 
+	padding-top: 200px;
+}
+
+.validate-dialog{
+	margin:0 auto; 
+	height: 230px; 
+	width: 500px; 
+	background-color: white; 
+	padding:20px;
+}
+
+.submitArea{
+	width: 100%;
+	margin-top: 5px;
+	text-align: center;
+}
+
+.skinpackInfos{
+	width: 100%;
+	margin-top: 10px;
+	padding: 10px;
 }
