--- a/css/style.css
+++ b/css/style.css
@@ -62,12 +62,19 @@ section{
 	clear: both;
 }
 
-.jscolor{
+.hr-input{
 	height: 30px;
 	border: 1px solid #BDBDBD;
 	outline: none;
-	cursor: pointer;
 	padding-left:5px;
+}
+
+.input-text:focus{
+	border-bottom: 2px solid #00C853;
+}
+
+.jscolor{
+	cursor: pointer;
 }
 
 .hide{
