--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,23 @@ section{
     z-index: 0;
 }
 
+input[type=checkbox] {
+	font-family: "montserratRegular" 
+}
+
 .clearfix{
 	clear: both;
+}
+
+#errorVersion{
+	display: inline-block;
+	padding:10px;
+	margin-top: 5px;
+	border:2px solid #f00000;
+	border-left: 5px solid #f00000;
+	position: absolute;
+	color: #000;
+	font-family: "montserratRegular";
 }
 
 .hr-input{
@@ -71,6 +86,11 @@ section{
 
 .input-text:focus{
 	border-bottom: 2px solid #00C853;
+}
+
+.input-version{
+	width: 75px;
+	text-align: right;
 }
 
 .jscolor{
@@ -172,7 +192,7 @@ section{
 	background-color: #009688;
 }
 
-.hr-bloc-customize-color, .hr-bloc-customize-text, .hr-bloc-param-xml{
+.hr-bloc-customize-color, .hr-bloc-customize-text, .hr-bloc-param-xml, .hr-bloc-customize-img{
 	width: 90%;
 	margin: 10px auto;
 }
